WIP(): add bio and publications

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,114 +1,165 @@
 ---
 ---
 
-@string{aps = {American Physical Society,}}
-
-@book{einstein1920relativity,
-  title={Relativity: the Special and General Theory},
-  author={Einstein, Albert},
-  year={1920},
-  publisher={Methuen & Co Ltd},
-  html={relativity.html}
+@article{SILEO2024107486,
+  title = {Vision-enhanced Peg-in-Hole for automotive body parts using semantic image segmentation and object detection},
+  journal = {Engineering Applications of Artificial Intelligence},
+  volume = {128},
+  pages = {107486},
+  year = {2024},
+  issn = {0952-1976},
+  doi = {https://doi.org/10.1016/j.engappai.2023.107486},
+  url = {https://www.sciencedirect.com/science/article/pii/S0952197623016706},
+  author = {Monica Sileo and Nicola Capece and Monica Gruosso and Michelangelo Nigro and Domenico D. Bloisi and Francesco Pierri and Ugo Erra},
+  keywords = {Peg-in-Hole, Robot vision, Deep learning},
+  bibtex_show={true}
 }
 
-@book{einstein1956investigations,
+@article{10.1145/3579831,
+  author = {Manfredi, Gilda and Capece, Nicola and Erra, Ugo and Gruosso, Monica},
+  title = {TreeSketchNet: From Sketch to 3D Tree Parameters Generation},
+  year = {2023},
+  issue_date = {June 2023},
+  publisher = {Association for Computing Machinery},
+  address = {New York, NY, USA},
+  volume = {14},
+  number = {3},
+  issn = {2157-6904},
+  url = {https://doi.org/10.1145/3579831},
+  doi = {10.1145/3579831},
+  journal = {ACM Trans. Intell. Syst. Technol.},
+  month = {mar},
+  articleno = {41},
+  numpages = {29},
+  keywords = {Procedural modeling, 3D trees, 3D generation, datasets, neural networks, deep learning},
+  bibtex_show={true}
+}
+
+@article{gruosso2023egocentric,
+  title={Egocentric upper limb segmentation in unconstrained real-life scenarios},
+  author={Gruosso, Monica and Capece, Nicola and Erra, Ugo},
+  journal={Virtual Reality},
+  volume={27},
+  number={4},
+  pages={3421--3433},
+  year={2023},
+  publisher={Springer},
+  doi = {10.1007/s10055-022-00725-4},
+  html={http://graphics.unibas.it/www/EgoUpperLimbSeg_journal/index.md.html},
   bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation},
-  preview={brownian-motion.gif}
+  selected={true},
+  code={https://github.com/Unibas3D/Upper-Limb-Segmentation}
 }
 
-@article{einstein1950meaning,
-  abbr={AJP},
+@inproceedings{gruosso2021solid,
+  title={Solid and effective upper limb segmentation in egocentric vision},
+  author={Gruosso, Monica and Capece, Nicola and Erra, Ugo},
+  booktitle={Proceedings of the 26th International Conference on 3D Web Technology},
+  pages={1--9},
+  year={2021},
+  doi={10.1145/3485444.3495179},
+  html={http://graphics.unibas.it/www/EgoUpperLimbSeg/index.md.html},
   bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers}
+  selected={true},
+  code={https://github.com/Unibas3D/Upper-Limb-Segmentation}
 }
 
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein*†, A. and Podolsky*, B. and Rosen*, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.},
-  location={New Jersey},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  altmetric={248277},
-  dimensions={true},
-  google_scholar_id={qyhmnyLat1gC},
-  video={https://www.youtube-nocookie.com/embed/aqz-KE-bpKQ},
-  additional_info={. *More Information* can be [found here](https://github.com/alshedivat/al-folio/)},
-  annotation={* Example use of superscripts<br>† Albert Einstein},
-  selected={true}
-}
 
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
-}
-
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.},
-  volume={17},
-  pages={549--560},
-  year={1905}
-}
-
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
-}
-
-@Article{einstein1905photoelectriceffect,
+@inproceedings{10.2312:stag.20211483,
+  booktitle = {Smart Tools and Apps for Graphics - Eurographics Italian Chapter Conference},
+  editor = {Frosini, Patrizio and Giorgi, Daniela and Melzi, Simone and Rodolà, Emanuele},
+  title = {{Exploring Upper Limb Segmentation with Deep Learning for Augmented Virtuality}},
+  author = {Gruosso, Monica and Capece, Nicola and Erra, Ugo},
+  year = {2021},
+  publisher = {The Eurographics Association},
+  ISSN = {2617-4855},
+  ISBN = {978-3-03868-165-6},
+  DOI = {10.2312/stag.20211483},
   bibtex_show={true},
-  abbr={Ann. Phys.},
-  title="{{\"U}ber einen die Erzeugung und Verwandlung des Lichtes betreffenden heuristischen Gesichtspunkt}",
-  author={Albert Einstein},
-  abstract={This is the abstract text.},
-  journal={Ann. Phys.},
-  volume={322},
-  number={6},
-  pages={132--148},
-  year={1905},
-  doi={10.1002/andp.19053220607},
-  award={Albert Einstein receveid the **Nobel Prize in Physics** 1921 *for his services to Theoretical Physics, and especially for his discovery of the law of the photoelectric effect*},
-  award_name={Nobel Prize}
+  html={http://graphics.unibas.it/www/EgoUpperLimbSeg_STAG/index.md.html}
 }
 
-@book{przibram1967letters,
+@inproceedings{capece2021preliminary,
+  title={A preliminary investigation on a multimodal controller and freehand based interaction in virtual reality},
+  author={Capece, Nicola and Gruosso, Monica and Erra, Ugo and Catena, Rosario and Manfredi, Gilda},
+  booktitle={Augmented Reality, Virtual Reality, and Computer Graphics: 8th International Conference, AVR 2021, Virtual Event, September 7--10, 2021, Proceedings 8},
+  pages={53--65},
+  year={2021},
+  organization={Springer},
   bibtex_show={true},
-  title={Letters on wave mechanics},
-  author={Einstein, Albert and Schrödinger, Erwin and Planck, Max and Lorentz, Hendrik Antoon and Przibram, Karl},
-  year={1967},
-  publisher={Vision},
-  preview={wave-mechanics.gif},
-  abbr={Vision}
+  doi={10.1007/978-3-030-87595-4_5}
+}       
+
+@INPROCEEDINGS{9378684,
+  author={Gruosso, Monica and Capece, Nicola and Erra, Ugo and Biancospino, Flavio},
+  booktitle={2021 IEEE 19th World Symposium on Applied Machine Intelligence and Informatics (SAMI)}, 
+  title={A Validation Approach for Deep Reinforcement Learning of a Robotic Arm in a 3D Simulated Environment}, 
+  year={2021},
+  volume={},
+  number={},
+  pages={000043-000048},
+  keywords={Training;Robot kinematics;Reinforcement learning;Vision sensors;Robot sensing systems;Manipulators;Sports;Deep Reinforcement Learning;Deep Q-Network;Validation;Robotic Arm;Simulation Environment},
+  doi={10.1109/SAMI50585.2021.9378684},
+  bibtex_show={true},
+  html={http://graphics.unibas.it/www/ValidationDeepRL/index.md.html},
+  oral={https://conf.uni-obuda.hu/sami2021/7_SAMI.mp4}
+}
+
+@INPROCEEDINGS{9319109,
+  author={Gruosso, Monica and Capece, Nicola and Erra, Ugo and Angiolillo, Francesco},
+  booktitle={2020 IEEE International Conference on Artificial Intelligence and Virtual Reality (AIVR)}, 
+  title={A Preliminary Investigation into a Deep Learning Implementation for Hand Tracking on Mobile Devices}, 
+  year={2020},
+  volume={},
+  number={},
+  pages={380-385},
+  keywords={Two dimensional displays;Cameras;Three-dimensional displays;Neural networks;Heating systems;Computational modeling;Performance evaluation;Deep Learning;Human-Computer Interaction;Image Processing;Hand Tracking},
+  doi={10.1109/AIVR50618.2020.00079},
+  bibtex_show={true},
+  html={http://graphics.unibas.it/www/HandTrackingMobile/index.md.html},
+  poster={http://graphics.unibas.it/www/mgruosso/posters/poster_AIVR_GruossoMonica_2.pdf}
+}
+
+
+@inproceedings{10.2312:gch.20201301,
+  booktitle = {Eurographics Workshop on Graphics and Cultural Heritage},
+  editor = {Spagnuolo, Michela and Melero, Francisco Javier},
+  title = {{Archaeo Puzzle: An Educational Game Using Natural User Interface for Historical Artifacts}},
+  author = {Capece, Nicola and Erra, Ugo and Gruosso, Monica and Anastasio, Marco},
+  year = {2020},
+  publisher = {The Eurographics Association},
+  ISSN = {2312-6124},
+  ISBN = {978-3-03868-110-6},
+  DOI = {10.2312/gch.20201301},
+  bibtex_show={true}
+}
+        
+@article{gruosso2021human,
+  title={Human segmentation in surveillance video with deep learning},
+  author={Gruosso, Monica and Capece, Nicola and Erra, Ugo},
+  journal={Multimedia Tools and Applications},
+  volume={80},
+  number={1},
+  pages={1175--1199},
+  year={2021},
+  publisher={Springer},
+  doi={10.1007/s11042-020-09425-0},
+  bibtex_show={true},
+  selected={true},
+  html={http://graphics.unibas.it/www/HumanSegmentation/index.md.html},
+  code={https://github.com/gruossomonica/humanseg_surveillance}
+}
+
+@INPROCEEDINGS{9089897,
+  author={Gruosso, Monica and Capece, Nicola and Erra, Ugo and Lopardo, Nunzio},
+  booktitle={2019 10th IEEE International Conference on Cognitive Infocommunications (CogInfoCom)}, 
+  title={A Deep Learning approach for the Motion Picture Content Rating}, 
+  year={2019},
+  volume={},
+  number={},
+  pages={137-142},
+  keywords={Motion pictures;Videos;Training;Feature extraction;Visualization;Blood;Machine learning},
+  doi={10.1109/CogInfoCom47531.2019.9089897},
+  bibtex_show={true},
+  html={http://graphics.unibas.it/www/ContentRatingModel/index.md.html}
 }
