fix(): fix publications

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -2,6 +2,7 @@
 ---
 
 @article{SILEO2024107486,
+  abbr={ENGAPP},
   title = {Vision-enhanced Peg-in-Hole for automotive body parts using semantic image segmentation and object detection},
   journal = {Engineering Applications of Artificial Intelligence},
   volume = {128},
@@ -16,6 +17,7 @@
 }
 
 @article{10.1145/3579831,
+  abbr={ACM},
   author = {Manfredi, Gilda and Capece, Nicola and Erra, Ugo and Gruosso, Monica},
   title = {TreeSketchNet: From Sketch to 3D Tree Parameters Generation},
   year = {2023},
@@ -36,6 +38,7 @@
 }
 
 @article{gruosso2023egocentric,
+  abbr={VR},
   title={Egocentric upper limb segmentation in unconstrained real-life scenarios},
   author={Gruosso, Monica and Capece, Nicola and Erra, Ugo},
   journal={Virtual Reality},
@@ -52,6 +55,7 @@
 }
 
 @inproceedings{gruosso2021solid,
+  abbr={WEB3D},
   title={Solid and effective upper limb segmentation in egocentric vision},
   author={Gruosso, Monica and Capece, Nicola and Erra, Ugo},
   booktitle={Proceedings of the 26th International Conference on 3D Web Technology},
@@ -66,6 +70,7 @@
 
 
 @inproceedings{10.2312:stag.20211483,
+  abbr={STAG},
   booktitle = {Smart Tools and Apps for Graphics - Eurographics Italian Chapter Conference},
   editor = {Frosini, Patrizio and Giorgi, Daniela and Melzi, Simone and Rodolà, Emanuele},
   title = {{Exploring Upper Limb Segmentation with Deep Learning for Augmented Virtuality}},
@@ -80,6 +85,7 @@
 }
 
 @inproceedings{capece2021preliminary,
+  abbr={AVR},
   title={A preliminary investigation on a multimodal controller and freehand based interaction in virtual reality},
   author={Capece, Nicola and Gruosso, Monica and Erra, Ugo and Catena, Rosario and Manfredi, Gilda},
   booktitle={Augmented Reality, Virtual Reality, and Computer Graphics: 8th International Conference, AVR 2021, Virtual Event, September 7--10, 2021, Proceedings 8},
@@ -91,6 +97,7 @@
 }       
 
 @INPROCEEDINGS{9378684,
+  abbr={SAMI},
   author={Gruosso, Monica and Capece, Nicola and Erra, Ugo and Biancospino, Flavio},
   booktitle={2021 IEEE 19th World Symposium on Applied Machine Intelligence and Informatics (SAMI)}, 
   title={A Validation Approach for Deep Reinforcement Learning of a Robotic Arm in a 3D Simulated Environment}, 
@@ -106,6 +113,7 @@
 }
 
 @INPROCEEDINGS{9319109,
+  abbr={AIVR},
   author={Gruosso, Monica and Capece, Nicola and Erra, Ugo and Angiolillo, Francesco},
   booktitle={2020 IEEE International Conference on Artificial Intelligence and Virtual Reality (AIVR)}, 
   title={A Preliminary Investigation into a Deep Learning Implementation for Hand Tracking on Mobile Devices}, 
@@ -122,6 +130,7 @@
 
 
 @inproceedings{10.2312:gch.20201301,
+  abbr={GCH},
   booktitle = {Eurographics Workshop on Graphics and Cultural Heritage},
   editor = {Spagnuolo, Michela and Melero, Francisco Javier},
   title = {{Archaeo Puzzle: An Educational Game Using Natural User Interface for Historical Artifacts}},
@@ -135,6 +144,7 @@
 }
         
 @article{gruosso2021human,
+  abbr={MTA},
   title={Human segmentation in surveillance video with deep learning},
   author={Gruosso, Monica and Capece, Nicola and Erra, Ugo},
   journal={Multimedia Tools and Applications},
@@ -151,6 +161,7 @@
 }
 
 @INPROCEEDINGS{9089897,
+  abbr={COGINFO},
   author={Gruosso, Monica and Capece, Nicola and Erra, Ugo and Lopardo, Nunzio},
   booktitle={2019 10th IEEE International Conference on Cognitive Infocommunications (CogInfoCom)}, 
   title={A Deep Learning approach for the Motion Picture Content Rating}, 
