--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -109,7 +109,7 @@
   doi={10.1109/SAMI50585.2021.9378684},
   bibtex_show={true},
   html={http://graphics.unibas.it/www/ValidationDeepRL/index.md.html},
-  oral={https://conf.uni-obuda.hu/sami2021/7_SAMI.mp4}
+  video={https://conf.uni-obuda.hu/sami2021/7_SAMI.mp4}
 }
 
 @INPROCEEDINGS{9319109,
