WIP(): update publications

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -65,7 +65,8 @@
   html={http://graphics.unibas.it/www/EgoUpperLimbSeg/index.md.html},
   bibtex_show={true},
   selected={true},
-  code={https://github.com/Unibas3D/Upper-Limb-Segmentation}
+  code={https://github.com/Unibas3D/Upper-Limb-Segmentation},
+  video={https://drive.google.com/file/d/1iw8ajQkeZ_665pczmAbvCA6wX62QxN__/view?usp=drive_link}
 }
 
 
